--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.activities.StoreDetailsActivity"></activity>
+        <activity android:name=".ui.activities.DisplayProductsActivity"></activity>
+        <activity android:name=".ui.activities.StoreDetailsActivity" />
         <activity
             android:name=".ui.activities.AddEditStoreActivity"
             android:screenOrientation="portrait"
